--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,33 +3,4 @@ project(Thang_11_Di_Hue)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Thang_11_Di_Hue main.cpp
-        Codeforces/A/1950A.cpp
-        Codeforces/A/1915A.cpp
-        Codeforces/A/1985A.cpp
-        Codeforces/A/1926A.cpp
-        Codeforces/A/1899A.cpp
-        Codeforces/B/1985B.cpp
-        Codeforces/A/1971A.cpp
-        Codeforces/A/1927A.cpp
-        Codeforces/A/1999A.cpp
-        Codeforces/A/1941A.cpp
-        Codeforces/A/1955A.cpp
-        Codeforces/B/1915B.cpp
-        Codeforces/C/1915C.cpp
-        Codeforces/A/1980A.cpp
-        Codeforces/C/1950C.cpp
-        Codeforces/A/1992A.cpp
-        Codeforces/A/1986A.cpp
-        Codeforces/A/1933A.cpp
-        Codeforces/A/1996A.cpp
-        Codeforces/B/1950B.cpp
-        Codeforces/A/1907A.cpp
-        Codeforces/A/1931A.cpp
-        Codeforces/D/1850D.cpp
-        Codeforces/B/1971B.cpp
-        Codeforces/B/1980B.cpp
-        Codeforces/A/2000A.cpp
-        Codeforces/B/1921B.cpp
-        Codeforces/A/2009A.cpp
-        Codeforces/A/1919A.cpp)
+add_executable(Thang_11_Di_Hue main.cpp)
